force-app/main/default/objects/pse__Triggers__c/fields/pse__handleAssignProjectPhaseChangesDisable__c.field-meta.xml
<CustomField>
    <fullName>pse__handleAssignProjectPhaseChangesDisable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the handleAssignmentProjectPhaseChanges trigger is disabled.</description>
    <inlineHelpText>Indicates whether the handleAssignmentProjectPhaseChanges trigger is disabled.</inlineHelpText>
    <label>handleAsnProjPhaseChangeDisabled</label>
    <type>Checkbox</type>
</CustomField>