force-app/main/default/objects/pse__Triggers__c/fields/pse__RecalculateEstVsActuals_Disabled__c.field-meta.xml
<CustomField>
    <fullName>pse__RecalculateEstVsActuals_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to disable the RecalculateEstVsActuals2 trigger.</inlineHelpText>
    <label>RecalculateEstVsActuals Disabled</label>
    <type>Checkbox</type>
</CustomField>