force-app/main/default/objects/pse__Triggers__c/fields/pse__RecalculateEstVsActuals_Enabled__c.field-meta.xml
<CustomField>
    <fullName>pse__RecalculateEstVsActuals_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>OBSOLETE - use RecalculateEstVsActuals_Disabled instead</inlineHelpText>
    <label>RecalculateEstVsActuals Enabled</label>
    <type>Checkbox</type>
</CustomField>