force-app/main/default/objects/pse__Triggers__c/fields/pse__Res_Request_Geolocation_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>pse__Res_Request_Geolocation_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the resource request trigger that calculates geolocation from the work address is disabled.  The default value is false.</description>
    <inlineHelpText>When true, the resource request trigger that calculates geolocation from the work address is disabled.  The default value is false.</inlineHelpText>
    <label>Res Request Geolocation Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>