force-app/main/default/objects/pse__Triggers__c/fields/pse__Resource_Geolocation_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Geolocation_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the resource trigger that calculates geolocation from the mailing address is disabled. The default value is false.</description>
    <inlineHelpText>When true, the resource trigger that calculates geolocation from the mailing address is disabled. The default value is false.</inlineHelpText>
    <label>Resource Geolocation Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>