force-app/main/default/objects/pse__Triggers__c/fields/pse__Task_Assignment_Insert_Disabled__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Assignment_Insert_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Assignment-Insert Disabled</label>
    <type>Checkbox</type>
</CustomField>