force-app/main/default/objects/pse__Triggers__c/fields/pse__Task_Insert_Disabled__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Insert_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether the before insert trigger on task is executed.</inlineHelpText>
    <label>Task-Insert Disabled</label>
    <type>Checkbox</type>
</CustomField>