force-app/main/default/objects/pse__Triggers__c/fields/pse__Task_Set_Task_Chain_Disabled__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Set_Task_Chain_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the trigger that maintains the task hierarchy chain is disabled.</description>
    <inlineHelpText>Whether the trigger that maintains the task hierarchy chain is disabled.</inlineHelpText>
    <label>Task-Set Task Chain Disabled</label>
    <type>Checkbox</type>
</CustomField>