force-app/main/default/objects/pse__Triggers__c/fields/pse__TrackResourceChanges_Enabled__c.field-meta.xml
<CustomField>
    <fullName>pse__TrackResourceChanges_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>OBSOLETE - Use TrackResourceChanges_Disabled instead</inlineHelpText>
    <label>TrackResourceChanges Enabled</label>
    <type>Checkbox</type>
</CustomField>